--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,7 @@ dependencies {
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
     compile 'com.rabbitmq:amqp-client:4.1.0'
     compile group: 'org.jdom', name: 'jdom2', version: '2.0.5'
+    compile group: 'org.json', name: 'json', version: '20090211'
+    compile group: 'com.google.code.gson', name: 'gson', version: '1.7.2'
+
 }
